src/_patterns/40-compounds/lists/popular-links-menu.css
@charset "UTF-8";
@font-face {
  font-family: "icomoon";
  src: url("../fonts/icomoon/icomoon.eot");
  src: url("../fonts/icomoon/icomoon.eot#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf") format("truetype"), url("../fonts/icomoon/icomoon.woff") format("woff"), url("../fonts/icomoon/icomoon.svg#icomoon") format("svg");
  font-weight: normal;
  font-style: normal;
}
ico,
[class^=ico-],
[class*=ico-] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: "icomoon" !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.ico-arrow-down-circle::before {
  content: "";
}

.ico-arrow-left-circle::before {
  content: "";
}

.ico-arrow-right-circle::before {
  content: "";
}

.ico-arrow-up-circle::before {
  content: "";
}

.ico-arrow-down-left::before {
  content: "";
}

.ico-arrow-down-right::before {
  content: "";
}

.ico-arrow-up-right::before {
  content: "";
}

.ico-arrow-up-left::before {
  content: "";
}

.ico-arrow-down::before {
  content: "";
}

.ico-arrow-left::before {
  content: "";
}

.ico-arrow-right::before {
  content: "";
}

.ico-arrow-up::before {
  content: "";
}

.ico-chevron-down::before {
  content: "";
}

.ico-chevron-left::before {
  content: "";
}

.ico-chevron-right::before {
  content: "";
}

.ico-chevron-up::before {
  content: "";
}

.ico-chevrons-down::before {
  content: "";
}

.ico-chevrons-left::before {
  content: "";
}

.ico-chevrons-right::before {
  content: "";
}

.ico-chevrons-up::before {
  content: "";
}

.ico-corner-down-left::before {
  content: "";
}

.ico-corner-down-right::before {
  content: "";
}

.ico-corner-left-down::before {
  content: "";
}

.ico-corner-left-up::before {
  content: "";
}

.ico-corner-right-down::before {
  content: "";
}

.ico-corner-right-up::before {
  content: "";
}

.ico-corner-up-left::before {
  content: "";
}

.ico-corner-up-right::before {
  content: "";
}

.popular-links-menu-title .anchor {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.popular-links-menu-title .anchor .icon {
  margin: 0 !important;
}
.popular-links-menu-title:not(.is-anchored) .popular-links-menu-title .anchor {
  display: none;
}

.popular-links-menu.-hours .popular-links-menu-list-item .link,
.popular-links-menu.-hours .popular-links-menu-list-item a {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  text-decoration: none;
  cursor: pointer;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link::after,
.popular-links-menu.-hours .popular-links-menu-list-item a::after {
  content: attr(data-subtext);
  display: block;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link .icon,
.popular-links-menu.-hours .popular-links-menu-list-item a .icon {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.popular-links-menu {
  display: grid;
  grid-template-columns: 1fr;
}
.popular-links-menu-title, .popular-links-menu-list {
  margin: 0;
}
.popular-links-menu-title {
  grid-row: 1;
}
.popular-links-menu-list {
  grid-row: 2;
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-flow: row;
  list-style: none;
  padding: 0;
}
@media (min-width: 901px) {
  .popular-links-menu-list {
    grid-template-rows: -webkit-min-content;
    grid-template-rows: min-content;
    grid-template-columns: unset;
    grid-auto-flow: column;
  }
}
.popular-links-menu-list-item {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  height: 45px;
}
@media (min-width: 901px) {
  .popular-links-menu:not(.-hours) .popular-links-menu-list-item:not(:last-child)::after {
    content: "";
    top: 0;
    bottom: 0;
    position: absolute;
    height: 20px;
    margin: auto;
  }
}

.popular-links-menu {
  background-color: #091C44;
}
.popular-links-menu-title {
  font-family: "Open Sans", sans-serif;
  font-size: 12px;
  font-weight: bold;
  font-style: normal;
  line-height: 1.6667;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #E9BF55;
}
.popular-links-menu-title.is-anchored:hover .anchor, .popular-links-menu-title.is-anchored.is-hover .anchor, .popular-links-menu-title.is-anchored:focus .anchor, .popular-links-menu-title.is-anchored.is-focus .anchor {
  visibility: visible;
  opacity: 1;
}
.popular-links-menu-title .anchor {
  -webkit-transition: visibility 0s, opacity 0.25s ease;
  transition: visibility 0s, opacity 0.25s ease;
  margin-left: 20px;
  width: 25px;
  height: 25px;
  opacity: 0;
  visibility: hidden;
}
@media (min-width: 901px) {
  .popular-links-menu-list-item {
    margin-right: 30px;
  }
  .popular-links-menu-list-item:not(:last-child)::after {
    opacity: 0.2;
    height: 20px;
    width: 1px;
    background-color: #E7EAF1;
    right: -15px;
  }
}
@media (min-width: 1200px) {
  .popular-links-menu-list-item {
    margin-right: 45px;
  }
  .popular-links-menu-list-item:not(:last-child)::after {
    right: -22.5px;
  }
}
.popular-links-menu.-hours .popular-links-menu-list-item {
  font-size: 20px !important;
}
.popular-links-menu.-hours .popular-links-menu-list-item {
  font-family: "Cardo", serif;
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  line-height: 2.05;
  letter-spacing: normal;
  text-transform: none;
  text-align: left;
  color: #FFFFFF;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link,
.popular-links-menu.-hours .popular-links-menu-list-item a {
  font-size: 11px !important;
  text-decoration: underline !important;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link,
.popular-links-menu.-hours .popular-links-menu-list-item a {
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  font-weight: normal;
  font-style: normal;
  line-height: 1.9375;
  letter-spacing: normal;
  text-transform: uppercase;
  text-align: left;
  color: #605858;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link,
.popular-links-menu.-hours .popular-links-menu-list-item a {
  font-weight: bold;
  font-style: normal;
  color: #5387F7;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  background: none;
  border: none;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link .icon,
.popular-links-menu.-hours .popular-links-menu-list-item a .icon {
  width: 24px;
  height: 24px;
  margin-right: 1ex;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link .icon svg,
.popular-links-menu.-hours .popular-links-menu-list-item a .icon svg {
  fill: #5387F7;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link:hover, .popular-links-menu.-hours .popular-links-menu-list-item .link.is-hover, .popular-links-menu.-hours .popular-links-menu-list-item .link:focus, .popular-links-menu.-hours .popular-links-menu-list-item .link.is-focus,
.popular-links-menu.-hours .popular-links-menu-list-item a:hover,
.popular-links-menu.-hours .popular-links-menu-list-item a.is-hover,
.popular-links-menu.-hours .popular-links-menu-list-item a:focus,
.popular-links-menu.-hours .popular-links-menu-list-item a.is-focus {
  color: #336BE6;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link:hover .icon svg, .popular-links-menu.-hours .popular-links-menu-list-item .link.is-hover .icon svg, .popular-links-menu.-hours .popular-links-menu-list-item .link:focus .icon svg, .popular-links-menu.-hours .popular-links-menu-list-item .link.is-focus .icon svg,
.popular-links-menu.-hours .popular-links-menu-list-item a:hover .icon svg,
.popular-links-menu.-hours .popular-links-menu-list-item a.is-hover .icon svg,
.popular-links-menu.-hours .popular-links-menu-list-item a:focus .icon svg,
.popular-links-menu.-hours .popular-links-menu-list-item a.is-focus .icon svg {
  fill: #336BE6;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link:active, .popular-links-menu.-hours .popular-links-menu-list-item .link.is-active,
.popular-links-menu.-hours .popular-links-menu-list-item a:active,
.popular-links-menu.-hours .popular-links-menu-list-item a.is-active {
  color: #336BE6;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link:active .icon svg, .popular-links-menu.-hours .popular-links-menu-list-item .link.is-active .icon svg,
.popular-links-menu.-hours .popular-links-menu-list-item a:active .icon svg,
.popular-links-menu.-hours .popular-links-menu-list-item a.is-active .icon svg {
  fill: #336BE6;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link::after,
.popular-links-menu.-hours .popular-links-menu-list-item a::after {
  font-size: 12px !important;
  line-height: 1 !important;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link::after,
.popular-links-menu.-hours .popular-links-menu-list-item a::after {
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  font-weight: normal;
  font-style: italic;
  line-height: 1.9375;
  letter-spacing: normal;
  text-transform: none;
  text-align: left;
  color: #605858;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link.-popular,
.popular-links-menu.-hours .popular-links-menu-list-item a.-popular {
  font-size: 20px !important;
  color: #FFFFFF;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link.-popular,
.popular-links-menu.-hours .popular-links-menu-list-item a.-popular {
  font-family: "Cardo", serif;
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  line-height: 2.05;
  letter-spacing: normal;
  text-transform: none;
  text-align: left;
  color: #FFFFFF;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link.-popular:hover, .popular-links-menu.-hours .popular-links-menu-list-item .link.-popular.is-hover, .popular-links-menu.-hours .popular-links-menu-list-item .link.-popular:focus, .popular-links-menu.-hours .popular-links-menu-list-item .link.-popular.is-focus,
.popular-links-menu.-hours .popular-links-menu-list-item a.-popular:hover,
.popular-links-menu.-hours .popular-links-menu-list-item a.-popular.is-hover,
.popular-links-menu.-hours .popular-links-menu-list-item a.-popular:focus,
.popular-links-menu.-hours .popular-links-menu-list-item a.-popular.is-focus {
  color: #336BE6;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link.-popular:active, .popular-links-menu.-hours .popular-links-menu-list-item .link.-popular.is-active,
.popular-links-menu.-hours .popular-links-menu-list-item a.-popular:active,
.popular-links-menu.-hours .popular-links-menu-list-item a.-popular.is-active {
  color: #336BE6;
}
.popular-links-menu.-hours .popular-links-menu-list-item .link.-underline,
.popular-links-menu.-hours .popular-links-menu-list-item a.-underline {
  text-decoration: underline;
}

